test_includes = include_directories('../test', '../include')

test_sources = [
    'MobileClient_test.cpp',
    'NetConfAgent.cpp',
    'MobileClient.cpp'
]

test_sources_with_path = [
    './test/MobileClient_test.cpp',
    './source/NetConfAgent.cpp',
    './source/MobileClient.cpp'
]



#foreach i : test_sources
#    test_sources_with_path += './test/' + i
#endforeach

